Update swagger endpoint for transparency api
